--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
     "moment": "^2.29.3",
+    "netlify": "^11.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
